main.tf
# Configure Terraform version requirements and AWS provider version
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.34"
    }
  }
}

# Configure AWS provider with region from variables
provider "aws" {
  region = var.aws_region
}

# Create security group to control inbound and outbound traffic
resource "aws_security_group" "CI_sg" {
  name        = "cloud-init-sg"
  description = "Allow HTTP and SSH"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "cloud-init-sg"
  }
}

# Creates an EC2 instance with cloud-init configuration
resource "aws_instance" "EC2" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.CI_sg.id]
  user_data              = file("cloud-init.yaml")

  tags = {
    Name = "cloud-init"
  }
}
